Fixed divider sizing on mobile

--- a/style.css
+++ b/style.css
@@ -246,7 +246,12 @@ video {
 }
 
 .divider img {
-	width: 35vw;
+	/*width: 35vw;*/
+	  display: block;
+	  max-width: 447px;
+	  max-height:30px;
+	  width: auto;
+	  height: auto;
 }
 
 .gallery {
